--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.SetUpProfileActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activity.LoginActivity"
             android:exported="false" />
         <activity
@@ -20,9 +23,6 @@
             android:exported="false" />
         <activity
             android:name=".Activity.MainActivity"
-            android:exported="false" />
-        <activity
-            android:name=".Activity.SignUp"
             android:exported="false" />
         <activity
             android:name=".Activity.SplashActivity"
